--- a/tapp/templates/cart.html
+++ b/tapp/templates/cart.html
@@ -86,7 +86,6 @@
                     <li><a href="/"><h4><b><font color='brown'>Home</font></b></h4></a></li>
                     <li><a href="/menu/"><h4><b><font color='brown'>Menu</font></b></h4></a></li>
                     <li class="active"><a href="/cart/"><h4><b><font color='brown'>Cart</font></b></h4></a></li>
-                    <li><a href="/login/"><h4><b><font color='brown'>Login</font></b></h4></a></li>
                     <li>
                       <a href="/faq/"><h4><b><font color='brown'>FAQ</font></b></h4></a>
                     </li>
@@ -100,7 +99,7 @@
             <!-- Button Group -->
             <div class="amado-btn-group mt-30 mb-100">
 
-                <a href="/logout/" class="btn amado-btn active">Logout</a>
+                <a href="/login/" class="btn amado-btn active">Login</a>
             </div>
             <!-- Cart Menu -->
 
@@ -120,6 +119,7 @@
         <div class="cart-table-area section-padding-100">
             <div class="container-fluid">
                 <div class="row">
+
                     <div class="col-12 col-lg-8">
                         <div class="cart-title mt-50">
                             <h2 align='center'style="margin-bottom:30px;">Shopping Cart</h2>
