--- a/tapp/templates/customize.html
+++ b/tapp/templates/customize.html
@@ -102,7 +102,6 @@
 				</div>
 			</section>
 			<!-- End banner Area -->
-
 			<!-- Start home-about Area -->
 			<section class="home-about-area section-gap">
 				<div class="container">
@@ -112,20 +111,21 @@
 								EVERY CAKE HAS A STOTY TO TELL</font>
 							</h1></u></i>
 								<p style="margin-top:50px;">
-								<span><font size="5"><font color="purple">	We specialise in Custom Cakes Handcrafted for Memorable Occasions like Baby Shower, Birthday, Wedding, Anniversary...whether in traditional or modern way. We also create gift hampers, be it corporate or personal, for festivals and celebrations.
-               </span>
+				  			<span><font size="5"><font color="purple">We specialise in Custom Cakes Handcrafted for Memorable Occasions like Baby Shower, Birthday, Wedding, Anniversary...whether in traditional or modern way. We also create gift hampers, be it corporate or personal, for festivals and celebrations.</span>
 							</h3>
 							<p style="margin-top:50px;">
-							<span><font color="purple">Please visit our instagram gallery for ideas or choose your own design and inquire about your order using the online form.	</span></h3>
+							<span><font color="purple">Please visit our instagram gallery for ideas or choose your own design and inquire about your order using the online form.</span></h3>
 
-						  <span><p style="margin-top:50px;">Please give us at least 2 days notice for all customised orders.<br>We don't deliver custom cakes and these need to be picked up from Sagar The Cakes Pride outlet.</p>
+							<span><p style="margin-top:50px;">Please give us at least 2 days notice for all customised orders.<br>We don't deliver custom cakes and these need to be picked up from Sagar The Cakes Pride outlet.</p>
 						</div>
 					</div>
 				</div>
-				<img class="about-img" src="http://shopithere.com/g/chi/chinese-birthday-cake-with-cherry-blossom-cakecentral-com.jpg" width="700" height="350" border="0" alt="" >
+				<img class="about-img" src="/static/img/about-img.jpg" alt="">
 			</section>
 			<!-- End home-about Area -->
 
+
+		
 											<form align='center'  method="post">{% csrf_token %}
 													<h1>Please fill the form for enquiry,we will reply you soon</h1>
 													<p style="margin-top:20px;">
