--- a/tapp/templates/order.html
+++ b/tapp/templates/order.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="UTF-8" />
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
-        <title><font color='pink'>Order Confirmation</font></title>
+        <title>Bakery|order</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Login and Registration Form with HTML5 and CSS3" />
         <meta name="keywords" content="html5, css3, form, switch, animation, :target, pseudo-class" />
@@ -21,18 +21,19 @@
         <div class="container">
             <!-- Codrops top bar -->
             <div class="codrops-top">
-                <a href="/">
-                  HOME
-                </a>
-                <span class="right">
-                    <a href="/menu/"> MENU
+              <b><font size="5">  <a href="/">
+                    HOME
+                  </a></font></b>
 
-                    </a>
+                <span class="right">
+                  <b><font size="5">  <a href="/">
+                        MENU
+                      </a></font></b>
                 </span>
                 <div class="clr"></div>
             </div><!--/ Codrops top bar -->
             <header>
-                <h1 align='center'><b><font color='blue'>Order Confirmation</font></b></h1>
+                <h1 align='center'><b><font color='#C70039'>Order Confirmation</font></b></h1>
 {% if msg %}
 <h2>{{msg}}</h2>
 {% endif %}
