--- a/tapp/templates/last.html
+++ b/tapp/templates/last.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="UTF-8" />
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
-        <title><font color='pink'>Login and Registration Form with HTML5 and CSS3</font></title>
+        <title>Bakery|confirm</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Login and Registration Form with HTML5 and CSS3" />
         <meta name="keywords" content="html5, css3, form, switch, animation, :target, pseudo-class" />
@@ -22,21 +22,28 @@
         <div class="container">
             <!-- Codrops top bar -->
             <div class="codrops-top">
-                <a href="/">
-                  HOME
-                </a>
+            <b><font size="5">  <a href="/logout">
+                  LOGOUT
+                </a></font></b>
                 <span class="right">
-                    <a href="/menu/"> MENU
+                      <b><font size="5">   <a href="/menu/"> MENU
 
-                    </a>
+                    </a></font></b>
                 </span>
                 <div class="clr"></div>
+
             </div><!--/ Codrops top bar -->
             <header>
-                <h1 align='center' style="margin-top:250px;" <b><font color='blue' ><font size="50">THANKS FOR ORDERING</font></font></b></h1>
-                  <h2 align='center' style="margin-top:20px;" <b><font color='blue' >(GIVE YOUR REVIEWS ON ZOMATO AS IT IS PRECIOUS FOR US)</font></b></h2>
-                    <h2 align='center' style="margin-top:20px;" <b><font color='blue' >HOPE YOU WILL BE BACK SOON</font></b></h2>
+
+                <h1 align='center' style="margin-top:250px;" <b><font color='#C70039' ><font size="50">THANKS FOR ORDERING <div class="col-1 col-lg-1">{% if  request.user.is_authenticated %}
+
+    <font size="50">{{request.user.username}}</font></h1>
+    {% endif %}
+                  <h3 align='center' style="margin-top:25px;" <b><font color='#C70039' ><font size="20">You will recieve your order soon</font></h2>
+                    <h2 align='center' style="margin-top:20px;" <b><font color='blue' ></font></b></h2>
+
                 </div>
+
             </section>
         </div>
     </body>
